--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@prisma/client": "^5.6.0",
-    "prisma": "^5.6.0"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.6.0",
+    "save-dev": "^0.0.1-security"
   }
 }
