--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@prisma/client": "^5.6.0",
+    "esrun": "^3.2.26",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "prisma": "^5.6.0",
